--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "version": "0.1.0",
   "private": true,
-  "description": "A short description about what your plugin does.",
+  "description": "Homebridge plugin for Welcome (https://github.com/DouweM/welcome)",
   "author": "DouweM",
   "license": "Apache-2.0",
   "homepage": "https://github.com/DouweM/homebridge-welcome#readme",
